fix: fixed spacing issue on wallet modal overlay

--- a/apps/platform/src/assets/styles/wallet.css
+++ b/apps/platform/src/assets/styles/wallet.css
@@ -58,11 +58,7 @@
 }
 
 .wallet-adapter-modal {
-  @apply fixed top-0 left-0 bottom-0 right-0 opacity-0 z-50 bg-black bg-opacity-50 overflow-y-auto transition-opacity ease-linear duration-150;
-}
-
-.wallet-adapter-modal.wallet-adapter-modal-fade-in {
-  @apply opacity-100;
+  @apply fixed inset-0 opacity-0 z-50 bg-black bg-opacity-50 overflow-y-auto transition-opacity ease-linear duration-150;
 }
 
 .wallet-adapter-modal-button-close {
@@ -82,11 +78,11 @@
 }
 
 .wallet-adapter-modal-overlay {
-  @apply fixed top-0 left-0 bottom-0 right-0 bg-black bg-opacity-5;
+  @apply fixed inset-0 bg-black bg-opacity-5;
 }
 
 .wallet-adapter-modal-container {
-  @apply flex justify-center items-center m-4 sm:m-12 min-h-screen;
+  @apply flex justify-center items-center min-h-screen;
 }
 
 .wallet-adapter-modal-wrapper {
@@ -141,5 +137,5 @@
 }
 
 .wallet-adapter-modal-middle-button {
-  @apply block w-full mt-12 p-3 bg-[#512da8] text-white text-base sm:text-lg rounded-lg border-none cursor-pointer;
+  @apply block w-full mt-12 p-3 bg-brand-orange text-white text-base sm:text-lg rounded-lg border-none cursor-pointer;
 }
